# third_party_cares

./: 0001-ADD-OHOS-DNS-PROXY-BY-NETSYS.patch  0001-OHOS-DNS-BY-NETSYS.patch  0002-ADD-OHOS-IPV6-PROXY-BY-NETSYS.patch  0003-ADD-OHOS-DNS-RETRY.patch  0003-ADD-OHOS-TIMEOUT-BY-NETSYS.patch  0004-ADD-OHOS-DNS-CHR-BY-NETSYS.patch  ADD-OHOS-DNS-PROXY-BY-NETSYS.patch  ADD_OHOS_DNS_PROXY_BY_NETSYS.patch  BUILD.gn  Makefile.inc  OAT.xml  README.OpenSource  adig.c  ares_data.c  ares_expand_name.c  ares_init.c  ares_parse_a_reply.c  ares_parse_aaaa_reply.c  ares_parse_caa_reply.c  bundle.json  install.py  install.sh
include/: ares.h  ares_config.h  ares_dns.h  ares_rules.h  ares_version.h
src/lib/: ares_addrinfo_localhost.c  ares_close_sockets.c  ares_conn.c  ares_cookie.c  ares_getaddrinfo.c  ares_init.c  ares_parse_into_addrinfo.c  ares_private.h  ares_process.c  ares_qcache.c  ares_send.c  ares_set_socket_functions.c  ares_sysconfig.c
src/lib/dsa/: ares_llist.c
src/lib/include/: ares_llist.h
src/lib/legacy/: ares_parse_a_reply.c  ares_parse_aaaa_reply.c
src/lib/util/: ares_iface_ips.c
test/: ares-test-init.cc  ares-test-mock-ai.cc  ares-test-parse-caa.cc
